fixed title spacing

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ main {
   font-size: var(--fs-500);
   font-weight: var(--fw-bold);
   line-height: 1;
+  word-spacing: -1px;
   color: var(--clr-neutral-900);
 }
 
